<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="footStepMeter" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xzb-C7-iBn">
                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
                                <items>
                                    <tabBarItem title="START" image="Start" id="q9d-d9-lIy"/>
                                    <tabBarItem tag="1" title="STOP" image="Stop" id="8xL-4Z-efl"/>
                                    <tabBarItem tag="2" title="Foot View" image="View" id="wii-E3-Skb"/>
                                    <tabBarItem tag="3" title="Settings" image="Settings" id="V1y-Fj-DVA"/>
                                </items>
                                <color key="barTintColor" red="0.99607843139999996" green="0.75294117650000003" blue="0.027450980390000001" alpha="1" colorSpace="calibratedRGB"/>
                            </tabBar>
                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Wrl-BJ-aK5">
                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                            </mapView>
                            <view alpha="0.85000002384185791" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k8H-gW-u7r">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
                                <color key="backgroundColor" red="0.99607843139999996" green="0.75294117650000003" blue="0.027450980390000001" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="20" id="U85-N3-GhZ"/>
                                </constraints>
                            </view>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ixs-dp-mFH">
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <color key="barTintColor" red="0.99607843139999996" green="0.75294117650000003" blue="0.027450980390000001" alpha="1" colorSpace="calibratedRGB"/>
                                <textAttributes key="titleTextAttributes">
                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </textAttributes>
                                <items>
                                    <navigationItem title="Foot Step Meter" id="vOO-J4-gaV">
                                        <barButtonItem key="leftBarButtonItem" style="done" id="Oq6-UI-Sk7">
                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ghe-1h-NCt">
                                                <rect key="frame" x="16" y="0.0" width="72" height="44"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <state key="normal" image="Location"/>
                                                <connections>
                                                    <action selector="moveUserLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="W73-Jg-QBh"/>
                                                </connections>
                                            </button>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Item" style="done" id="wL9-CP-1Q9">
                                            <view key="customView" contentMode="scaleToFill" id="YU5-o1-9Mw">
                                                <rect key="frame" x="276" y="5.5" width="83" height="33"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="****" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xYk-Ud-Tg9">
                                                        <rect key="frame" x="0.0" y="8" width="83" height="21"/>
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="16"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                </subviews>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                            </view>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
                            </navigationBar>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="ixs-dp-mFH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Ayo-eV-46s"/>
                            <constraint firstAttribute="trailing" secondItem="ixs-dp-mFH" secondAttribute="trailing" id="EL1-1P-IRU"/>
                            <constraint firstItem="Wrl-BJ-aK5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Hlq-1u-dL9"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xzb-C7-iBn" secondAttribute="bottom" id="MbA-Rv-Eqy"/>
                            <constraint firstAttribute="trailing" secondItem="k8H-gW-u7r" secondAttribute="trailing" id="SMK-yu-Ymi"/>
                            <constraint firstAttribute="trailing" secondItem="Wrl-BJ-aK5" secondAttribute="trailing" id="Yth-0o-k9s"/>
                            <constraint firstItem="ixs-dp-mFH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kZ3-WU-Z1P"/>
                            <constraint firstItem="k8H-gW-u7r" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="mN5-zL-BVn"/>
                            <constraint firstItem="xzb-C7-iBn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="pz6-7D-ZDa"/>
                            <constraint firstAttribute="trailing" secondItem="xzb-C7-iBn" secondAttribute="trailing" id="u1b-PD-AyQ"/>
                            <constraint firstItem="Wrl-BJ-aK5" firstAttribute="top" secondItem="ixs-dp-mFH" secondAttribute="bottom" id="xPR-C7-MNY"/>
                            <constraint firstItem="xzb-C7-iBn" firstAttribute="top" secondItem="Wrl-BJ-aK5" secondAttribute="bottom" id="xdb-m1-qNR"/>
                            <constraint firstItem="k8H-gW-u7r" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="zev-Ey-f9b"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="countLabel" destination="xYk-Ud-Tg9" id="iZN-Bu-8m3"/>
                        <outlet property="currentLocationButton" destination="ghe-1h-NCt" id="9Eb-nv-dMc"/>
                        <outlet property="mapView" destination="Wrl-BJ-aK5" id="nOb-yC-uk4"/>
                        <outlet property="navigationBar" destination="ixs-dp-mFH" id="CfU-Z8-ooQ"/>
                        <outlet property="statusBarView" destination="k8H-gW-u7r" id="6Tb-t3-XEC"/>
                        <outlet property="tabBar" destination="xzb-C7-iBn" id="cUI-X5-hb6"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
        </scene>
    </scenes>
    <resources>
        <image name="Location" width="72" height="72"/>
        <image name="Settings" width="48" height="48"/>
        <image name="Start" width="48" height="48"/>
        <image name="Stop" width="48" height="48"/>
        <image name="View" width="48" height="48"/>
    </resources>
</document>
